add note about audio quality

--- a/episodes/2025-01-xx.md
+++ b/episodes/2025-01-xx.md
@@ -2,6 +2,8 @@ We start the year with a first: first time Chris and Michael meet a stranger thr
 
 [Kyle's bio]
 
+Apologies for the audio quality during the first 20(?) minutes of this episode. Michael needs to get better headphones.
+
 links
 link to tutorials
 link to primer(?)
