fix wrong file name, add page variable

--- a/episodes/2024-11-02.md
+++ b/episodes/2024-11-02.md
@@ -1,15 +1,17 @@
+@def title="A GSoC Project in Symbolics.jl with Alexander Demin and Yassin ElBedwihy"
+
 Welcome back, friends! Today, we exchange with Alex and Yassin about their Google Summer of Code project working on Symbolics.jl. They tell us their road to Julia and to their joint Google Summer of Code project, more specifically. They discuss the motivation behind the project, the challenges they faced, and the progress they made. They also touch on the importance of open-source code and the future of symbolic computation in Julia. They also discuss the experience of remote collaboration and the future of Symbolics.jl.
 
 Alexander Demin is a graduate student at École Polytechnique in Paris. He started using Julia around 2020 for prototyping computer algebra algorithms with Nemo.jl. He has since contributed several implementations to Julia, notably Groebner.jl and parts of StructuralIdentifiability.jl.
 
 Yassin ElBedwihy is a second year communications engineering bachelors at Zewail city UST (University of Science and Technology) based in Cairo, Egypt.
 
-Recorded on: 2024/08/23
-Hosts: Chris Rackauckas, Michael Tiemann
-Editor: Stazi
+Recorded on: 2024/08/23  
+Hosts: Chris Rackauckas, Michael Tiemann  
+Editor: Stazi  
 
-Find us everywhere:
-https://juliadispatch.fm
-https://github.com/JuliaDispatch/
-   / @juliadispatch  
-https://anchor.fm/s/fc63539c/podcast/rss
+Find us everywhere:  
+https://juliadispatch.fm    
+https://github.com/JuliaDispatch/    
+https://youtube.com/@JuliaDispatch    
+https://anchor.fm/s/fc63539c/podcast/rss    
