generate links automagically

--- a/episodes/2024-10-16.md
+++ b/episodes/2024-10-16.md
@@ -1,3 +1,8 @@
++++
+guest = "Tim Holy"
+title = "Julia Developer Experience"
++++
+
 Hello, world! In this first episode, we sit down with Dr. Tim Holy. He shares with us his origin story: how he has become an early Julia adopter, how Revise.jl and package pre-compilation was born and how we can create tools that help Julia developers to write high-quality code.
 
 Tim Holy is the Alan A. and Edith L. Wolff Professor of Neuroscience at Washington University School of Medicine in St. Louis. In the Julia community, he is probably best known for his work on Revise.jl (more than 1k stars on Github) and for the Holy traits pattern which bear his name. He has made major contributions to Julia's array infrastructure, package precompilation, and developer tools like the profiler and the debugger. He started to contribute to Julia in 2012, had his 1024th PR merged in 2016 and has contributed in over 20 Julia organizations.
