--- a/episodes/2024-11-02.md
+++ b/episodes/2024-11-02.md
@@ -1,4 +1,7 @@
-@def title="A GSoC Project in Symbolics.jl with Alexander Demin and Yassin ElBedwihy"
++++
+guest = "Alexander Demin and Yassin ElBedwihy"
+title = "A GSoC Project in Symbolics.jl"
++++
 
 Welcome back, friends! Today, we exchange with Alex and Yassin about their Google Summer of Code project working on Symbolics.jl. They tell us their road to Julia and to their joint Google Summer of Code project, more specifically. They discuss the motivation behind the project, the challenges they faced, and the progress they made. They also touch on the importance of open-source code and the future of symbolic computation in Julia. They also discuss the experience of remote collaboration and the future of Symbolics.jl.
 
