--- a/episodes/2024-12-14.md
+++ b/episodes/2024-12-14.md
@@ -1,3 +1,8 @@
++++
+guest = "Guillaume Dalle"
+title = "Automatic Differentiation"
++++
+
 Today, we're especially grateful for Guillaume's patience with us (it's pronounced Gi-yohm!). He shares his story going from beginner to maintainer in no time, discusses why it's so important to help each other without judgement, and reveals the surprising connection between Modern Julia Workflows and DifferentiationInterface.jl. We had a great time together chatting about open source software, and we're sure you will, too!
 
 Guillaume Dalle specializes in machine learning and optimization. He is currently finishing his postdoc at EPFL and will soon become a permanent researcher at École des Ponts, near Paris. His PhD dissertation received the "Prix de thèse maths-entreprises", a national award for the best thesis in mathematics with industrial applications. Within the Julia community, his work on DifferentiationInterface.jl and the Modern Julia Workflows earned him the Julia Community Prize in 2024. You may also recognize him from his cheesy song parodies on YouTube, but he will deny everything if you ask.
