--- a/episodes/2024-11-15.md
+++ b/episodes/2024-11-15.md
@@ -1,3 +1,8 @@
++++
+guest = "Jeff Bezanson"
+title = "Static Compilation of Julia"
++++
+
 Today, we talk with someone who might or might not be the man himself, but is definitely one of the co-creators of the Julia programming language: Jeff Bezanson. Jeff shares with us some of the origin story of Julia and how multiple dispatch found its way into the language. Then, we dig a bit deeper into the recent advancements of static compilation of Julia. Jeff explains why we had to wait so long, what the difficult design decisions have been, and the additional hurdles that had to be cleared.
 
 Jeff Bezanson is one of the reasons this podcast exists, because he is one of the co-creators of Julia. Together with his co-creators Stefan Karpinski, Viral Shah and Alan Edelman, he is also the co-founder of JuliaHub Inc. of which Jeff is currently the CTO. Together with Stefan and Viral, he was awarded the J. H. Wilkinson Prize for Numerical Software in 2019. He once stated that one of his favorite channels is hashtag gripes because he wants to know the pain points where Julia can still be improved the most.
