generate episode table from episodes/ directory

--- a/episodes/2024-10-16.md
+++ b/episodes/2024-10-16.md
@@ -1,6 +1,8 @@
 +++
 guest = "Tim Holy"
 title = "Julia Developer Experience"
+youtube = "https://www.youtube.com/watch?v=N8rqpPKUfYg"
+spotify = "https://open.spotify.com/episode/5GFlbZs1h7NIRzkF8SrANh?si=8WujdyqXRJ-Ka8dp97mevg"
 +++
 
 Hello, world! In this first episode, we sit down with Dr. Tim Holy. He shares with us his origin story: how he has become an early Julia adopter, how Revise.jl and package pre-compilation was born and how we can create tools that help Julia developers to write high-quality code.
