--- a/episodes/2024-11-15.md
+++ b/episodes/2024-11-15.md
@@ -1,6 +1,8 @@
 +++
 guest = "Jeff Bezanson"
 title = "Static Compilation of Julia"
+youtube = "https://www.youtube.com/watch?v=4CV5SG3OLMw"
+spotify = "https://open.spotify.com/episode/6n1192H8LOQyQG5pC82xHw?si=5a7c699861e14b3e"
 +++
 
 Today, we talk with someone who might or might not be the man himself, but is definitely one of the co-creators of the Julia programming language: Jeff Bezanson. Jeff shares with us some of the origin story of Julia and how multiple dispatch found its way into the language. Then, we dig a bit deeper into the recent advancements of static compilation of Julia. Jeff explains why we had to wait so long, what the difficult design decisions have been, and the additional hurdles that had to be cleared.
