--- a/episodes/2024-11-29.md
+++ b/episodes/2024-11-29.md
@@ -1,6 +1,8 @@
 +++
 guest = "Παναγιώτης Γεωργακόπουλος"
 title = "Pluto.jl"
+youtube = "https://www.youtube.com/watch?v=TknY3rE1TeE"
+spotify = "https://open.spotify.com/episode/4XOXHZmPQ0d03n3gYn8m11?si=61c6f8aa52ff4832"
 +++
 
 In this episode, we sit down with Παναγιώτης Γεωργακόπουλος. We discuss the evolution of the Pluto project and the user experience philosophy behind it. Παναγιώτης shares with us some of the technical and design challenges that come with it, but also how far reaching some of these principles can be. And we discuss, how open source projects and community development can come together and reinforce each other. Oh, and Chris' camera has gone on strike half-way through - but see for yourself.
