--- a/episodes/2024-12-14.md
+++ b/episodes/2024-12-14.md
@@ -1,6 +1,8 @@
 +++
 guest = "Guillaume Dalle"
 title = "Automatic Differentiation"
+youtube = "https://www.youtube.com/watch?v=slDh2HxTzt4"
+spotify = "https://open.spotify.com/episode/20mlAPebpWYNB1fk9a1nV6?si=f70b147a18224e0d"
 +++
 
 Today, we're especially grateful for Guillaume's patience with us (it's pronounced Gi-yohm!). He shares his story going from beginner to maintainer in no time, discusses why it's so important to help each other without judgement, and reveals the surprising connection between Modern Julia Workflows and DifferentiationInterface.jl. We had a great time together chatting about open source software, and we're sure you will, too!
