--- a/episodes/2025-01-14.md
+++ b/episodes/2025-01-14.md
@@ -2,7 +2,7 @@
 guest = "Kyle Conel"
 title = "JulGame"
 youtube = "https://www.youtube.com/watch?v=yXJsczSOLG4"
-spotify = ""
+spotify = "https://open.spotify.com/episode/4HhsqWRxN6YBU7t1Lo79da?si=c098a42d45f54da5"
 +++
 
 We start the year with a first: first time Chris and Michael meet a stranger through Julia Dispatch. Today, we have Kyle Conel on the show who is the main developer of the game engine `JulGame`. Kyle shares with us how an early passion about video games has made him switch majors in college to become a software developer. He talks about how he's learning by doing, how you can start in Julia with an object-oriented mind set and only later take full advantage of the multiple dispatch paradigm, and his plans to (eventually) publish a game developed in Julia to Steam.
